--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
+        "maatwebsite/excel": "^3.0",
         "stripe/stripe-php": "^12.0"
     },
     "require-dev": {
