--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,5 +20,5 @@ jobs:
           key: ${{ secrets.SSHKEY }}
           script: |
             cd /var/www/html/public_html
-            git pull origin staging
+            git pull origin staing
             php artisan config:clear
