--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ transportanycar_code_29_08.zip
 old_bkp/
 .github/workflows/deploy.yml
 /app/Http/Helpers.php
+/storage
 /storage/framework/cache/*
 /storage/framework/views/*
 robots.txt
