--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -2,7 +2,7 @@ name: Deploy to Staging
 
 on:
   push:
-    branches: ["staging"]
+    branches: ["staging_server"]
 
 jobs:
   deploy:
@@ -23,6 +23,8 @@ jobs:
           key: ${{ secrets.SH_KEY }}
           script: |
             cd /var/www/html/staging.transportanycar.com
-            git pull origin staging
+            git pull origin staging_server
             php artisan migrate --force
             php artisan config:cache
+            php artisan route:cache
+            php artisan view:cache
