--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -20,7 +20,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           port: ${{ secrets.PORT }}
-          key: ${{ secrets.SH_KEY }}
+          key: ${{ secrets.SSH_KEY }}
           script: |
             cd /var/www/html/staging.transportanycar.com
             git pull origin staging_server
